--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <p class="main-pre">Приглашаем Вас на онлайн-встречу</p>
+              <p class="main-pre">Приглашаем Вас <span>на онлайн-встречу</span></p>
               <h1 class="main-title">Инвестиции <br/><span>в недвижимость Сочи</span></h1>
-              <h2 class="main-subtitle">Цены за 1 кв.м. растут, как на дрожжах!</h2>
+              <h2 class="main-subtitle">На рынке недвижимости Сочи ажиотаж: <br/>цены растут, как на дрожжах!</h2>
               <div class="main-info">
-                <p class="main-info-text">Дата и время проведения: <span>20 мая, в 19:00(Мск)</span></p>
+                <p class="main-info-text">Дата и время проведения: <span>17 июня, в 19:00 (мск)</span></p>
                 <p class="main-info-text">Ведущий: <span>Юрий Медушенко</span></p>
               </div>
             </div>
@@ -69,7 +69,7 @@
               </div>
             </div>
           </div>
-          <h3 class="main-aftertitle">Успейте заработать на этом!</h3>
+          <h3 class="main-aftertitle">Выиграйте вместе с нами <br/>на дефиците предложений на рынке!</h3>
         </div>
       </section>
       <section class="form-section">
@@ -79,7 +79,7 @@
               <h3 class="form-title">СПЕШИТЕ ЗАПИСАТЬСЯ</h3>
             </div>
             <div class="col-md-7">
-              <form class="form form-1" action="https://mycapital.autoweboffice.ru/?r=personal/newsletter/sub/add&amp;id=28323&amp;lg=ru&amp;Contact[id_newsletter]=34" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target="_blank">
+              <form class="form form-1" action="https://mycapital.autoweboffice.ru/?r=personal/newsletter/sub/add&amp;id=28323&amp;lg=ru&amp;Contact[id_newsletter]=36" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target="_blank">
                 <div class="email-block email-block-form">
                   <input type="hidden" value="1" name="required_fields[email]"/>
                   <input class="input input-mail input-mail-section" name="Contact[email]" type="text" placeholder="E-mail"/>
@@ -93,11 +93,11 @@
                 </div>
                 <div style="display: none;">
                   <div id="formTypeSpecificVars-1" style="display: none;">
-                    <input type="hidden" value="34" id="form_newsletter_id_newsletter_1" name="Contact[id_newsletter]"/>
+                    <input type="hidden" value="36" id="form_newsletter_id_newsletter_1" name="Contact[id_newsletter]"/>
                   </div><!-- API код канала рекламы -->
                   <input type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_1" name="Contact[id_advertising_channel_page]"/>
-                  <input type="hidden" name="formId" value="26"/>
-                  <input type="hidden" name="formVc" value="2750525908"/>
+                  <input type="hidden" name="formId" value="27"/>
+                  <input type="hidden" name="formVc" value="3282811932"/>
                   <input type="hidden" name="_aid" value=""/>
                   <input type="hidden" name="_vcaid" value=""/>
                 </div>
@@ -111,21 +111,21 @@
           <h3 class="general-title general-title-why">Мыслите шире – зарабатывайте больше!<small>Почему инвестировать в Сочи нужно именно сейчас</small></h3>
           <div class="row">
                   <div class="col-md-4">
-                    <div class="why-item why-item-1">
-                      <div class="why-item-icon why-item-icon-1"></div>
-                      <p class="why-item-text">Развитие инфраструктуры Краснодарского края – тренд последних лет!</p>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
                     <div class="why-item why-item-2">
                       <div class="why-item-icon why-item-icon-2"></div>
                       <p class="why-item-text">Сочи – регион №1 по темпам роста цен на землю <br>и объекты недвижимости</p>
                     </div>
                   </div>
                   <div class="col-md-4">
+                    <div class="why-item why-item-1">
+                      <div class="why-item-icon why-item-icon-1"></div>
+                      <p class="why-item-text">Один из трендов рынка Сочи – спрос на загородную недвижимость. Стоимость участков на популярных направлениях выросла <br>в 3-5 раз</p>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
                     <div class="why-item why-item-3">
                       <div class="why-item-icon why-item-icon-3"></div>
-                      <p class="why-item-text">В Сочи полным ходом идёт строительство инновационного центра «Сириус», общей площадью 81,1 га, с огромной инфраструктурой</p>
+                      <p class="why-item-text">С 1 июля 2021 года планируют ввести ограничение <br>на строительство многоквартирных домов. Будет разрешено ИЖС домов, площадью не более 300 кв. м. и высотой не более 12 м.</p>
                     </div>
                   </div>
           </div>
@@ -133,7 +133,7 @@
                   <div class="col-md-4">
                     <div class="why-item why-item-4">
                       <div class="why-item-icon why-item-icon-4"></div>
-                      <p class="why-item-text">На 30% вырос спрос <br>на жилую недвижимость <br>в Сочи с начала 2021 года <br>(по сравнению с таким же периодом 2020 года)</p>
+                      <p class="why-item-text">Рост цен начался осенью 2020 года, когда россияне стали выбирать город <br>в качестве подходящего места для самоизоляции. Только С НАЧАЛА 2021 ГОДА СПРОС НА ЖИЛУЮ НЕДВИЖИМОСТЬ ВЫРОС НА 30%</p>
                     </div>
                   </div>
                   <div class="col-md-4">
@@ -162,12 +162,12 @@
               <div class="col-md-7">
                 <div class="general-wrapper">
                   <ul class="plan-list">
-                    <li>Почему Сочи называют надеждой России?</li>
-                    <li>ИНТЦ “Сириус” – объект 2021 года</li>
+                    <li>Почему Сочи — перспективный регион для инвестиций</li>
+                    <li>ИЖС: преимущества и доходность</li>
                     <li>Космические цены: 400 тыс.руб. за 1 кв.м. – это не предел</li>
-                    <li>Доходный объект в Красной Поляне – наш новый проект</li>
-                    <li>Купить – реализовать – заработать: наша инвестиционная стратегия</li>
-                    <li>Короткий путь от инвестора-новичка до миллионера: сколько можно заработать на 1 кв.м. в Сочи</li>
+                    <li>Презентация 2 новых инвестпроектов по доходной недвижимости <br/>в Сочи</li>
+                    <li>Наша инвестиционная стратегия с доходностью до 153% в год</li>
+                    <li>Сколько можно заработать на 1 кв.м. в Сочи</li>
                   </ul>
                   <div class="button-wrapper"><a class="button button-up" href="#Modal">ХОЧУ ПОСЕТИТЬ ОНЛАЙН-ВСТРЕЧУ!</a></div>
                   <p class="plan-text">Покупка жилья в Сочи – не мечта, <br/>а прибыльный бизнес, открывающий новые горизонты качества жизни!</p>
@@ -210,7 +210,7 @@
               <h3 class="form-title">СПЕШИТЕ ЗАПИСАТЬСЯ</h3>
             </div>
             <div class="col-md-7">
-              <form class="form form-2" action="https://mycapital.autoweboffice.ru/?r=personal/newsletter/sub/add&amp;id=28323&amp;lg=ru&amp;Contact[id_newsletter]=34" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target="_blank">
+              <form class="form form-2" action="https://mycapital.autoweboffice.ru/?r=personal/newsletter/sub/add&amp;id=28323&amp;lg=ru&amp;Contact[id_newsletter]=36" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target="_blank">
                 <div class="email-block email-block-form">
                   <input type="hidden" value="1" name="required_fields[email]"/>
                   <input class="input input-mail input-mail-section" name="Contact[email]" type="text" placeholder="E-mail"/>
@@ -224,11 +224,11 @@
                 </div>
                 <div style="display: none;">
                   <div id="formTypeSpecificVars-2" style="display: none;">
-                    <input type="hidden" value="34" id="form_newsletter_id_newsletter_2" name="Contact[id_newsletter]"/>
+                    <input type="hidden" value="36" id="form_newsletter_id_newsletter_2" name="Contact[id_newsletter]"/>
                   </div><!-- API код канала рекламы -->
                   <input type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_2" name="Contact[id_advertising_channel_page]"/>
-                  <input type="hidden" name="formId" value="26"/>
-                  <input type="hidden" name="formVc" value="2750525908"/>
+                  <input type="hidden" name="formId" value="27"/>
+                  <input type="hidden" name="formVc" value="3282811932"/>
                   <input type="hidden" name="_aid" value=""/>
                   <input type="hidden" name="_vcaid" value=""/>
                 </div>
@@ -262,7 +262,7 @@
     <div class="white-popup mfp-hide" id="Modal">
       <h3 class="modal-title">Спешите записаться!</h3>
       <h3 class="modal-title hide">Мастер-класс завершён!</h3>
-      <form class="form form-modal" action="https://mycapital.autoweboffice.ru/?r=personal/newsletter/sub/add&amp;id=28323&amp;lg=ru&amp;Contact[id_newsletter]=34" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target="_blank">
+      <form class="form form-modal" action="https://mycapital.autoweboffice.ru/?r=personal/newsletter/sub/add&amp;id=28323&amp;lg=ru&amp;Contact[id_newsletter]=36" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target="_blank">
         <div class="email-block email-block-form">
           <input type="hidden" value="1" name="required_fields[email]"/>
           <input class="input input-mail input-mail-modal" name="Contact[email]" type="text" placeholder="Ваш email"/>
@@ -276,11 +276,11 @@
         </div>
         <div style="display: none;">
           <div id="formTypeSpecificVars-4" style="display: none;">
-            <input type="hidden" value="34" id="form_newsletter_id_newsletter_4" name="Contact[id_newsletter]"/>
+            <input type="hidden" value="36" id="form_newsletter_id_newsletter_4" name="Contact[id_newsletter]"/>
           </div><!-- API код канала рекламы -->
           <input type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_4" name="Contact[id_advertising_channel_page]"/>
-          <input type="hidden" name="formId" value="26"/>
-          <input type="hidden" name="formVc" value="2750525908"/>
+          <input type="hidden" name="formId" value="27"/>
+          <input type="hidden" name="formVc" value="3282811932"/>
           <input type="hidden" name="_aid" value=""/>
           <input type="hidden" name="_vcaid" value=""/>
         </div>
