Page 2 is adapted

--- a/2/index.html
+++ b/2/index.html
@@ -52,19 +52,19 @@
             <div class="mobile-menu-line mobile-menu-line-3"></div>
           </div>
         </header>
-        <div class="container">
+        <div class="container container-main">
           <div class="row">
             <div class="col-md-7">
-              <h1 class="main-title">Давно искали перспективные проекты<br/>в сфере недвижимости?</h1>
+              <h1 class="main-title">Давно искали перспективные проекты <br/>в сфере недвижимости?</h1>
               <h2 class="main-subtitle">Они перед вами!</h2>
-              <p class="main-text">Мы запускаем 2 проекта по ИЖС домов в Сочи с доходностью до 32% годовых!</p>
+              <p class="main-text">Мы запускаем 2 проекта по ИЖС домов в Сочи <br/>с доходностью до 32% годовых!</p>
               <div class="main-info">
-                <p class="main-info-text">Дефицит недвижимости Сочи «на руку» инвесторам!</p>
+                <p class="main-info-text">Дефицит недвижимости в Сочи «на руку» инвесторам!</p>
                 <p class="main-info-text">Ведущий презентации – Юрий Медушенко, соучредитель клуба инвесторов «Мой капитал»</p>
               </div>
             </div>
             <div class="col-md-5">
-              <p class="main-pre">Смотрите видео с презентации проекта, которая прошла 29 мая!</p>
+              <p class="main-pre">Смотрите видео с презентации проекта, <br/>которая прошла 29 мая!</p>
               <div class="video-wrapper video-wrapper-main">
                 <iframe src="https://www.youtube.com/embed/odnIu0a19XU?autoplay=1&mute=1&modestbranding=1" allowfullscreen="allowfullscreen"></iframe>
               </div>
@@ -77,15 +77,15 @@
         <div class="container">
           <div class="row">
             <div class="col-md-5">
-              <h3 class="form-section-title">УЧАСТВОВАТЬ В ПРОЕКТАХ!</h3>
+              <h3 class="form-section-title">УЧАСТВОВАТЬ <br/>В ПРОЕКТАХ!</h3>
             </div>
             <div class="col-md-7">
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                   <p class="form-section-text">с. Бестужевское</p>
-                  <div class="button-wrapper button-wrapper-center"><a class="button" href="https://forms.amocrm.ru/zmzzwl" target="_blank">Инвестировать</a></div>
+                  <div class="button-wrapper button-wrapper-center button-wrapper-form-1"><a class="button" href="https://forms.amocrm.ru/zmzzwl" target="_blank">Инвестировать</a></div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                   <p class="form-section-text">мкр-н "Белые акации"</p>
                   <div class="button-wrapper button-wrapper-center"><a class="button" href="https://forms.amocrm.ru/zmzzzr" target="_blank">Инвестировать</a></div>
                 </div>
@@ -139,11 +139,11 @@
           </div>
           <h4 class="why-aftertitle">Узнайте подробности у нашего эксперта во время вебинара!</h4>
           <div class="row">
-            <div class="col-md-4 col-md-offset-2">
+            <div class="col-md-4 col-sm-6 col-md-offset-2 col-sm-offset-0">
               <p class="form-section-text">с. Бестужевское</p>
-              <div class="button-wrapper button-wrapper-center"><a class="button" href="https://forms.amocrm.ru/zmzzwl" target="_blank">Инвестировать</a></div>
+              <div class="button-wrapper button-wrapper-center button-wrapper-form-1"><a class="button" href="https://forms.amocrm.ru/zmzzwl" target="_blank">Инвестировать</a></div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <p class="form-section-text">мкр-н "Белые акации"</p>
               <div class="button-wrapper button-wrapper-center"><a class="button" href="https://forms.amocrm.ru/zmzzzr" target="_blank">Инвестировать</a></div>
             </div>
@@ -152,48 +152,58 @@
       </section>
       <section id="info">
         <div class="container">
-          <div class="rect rect-info rect-info-1"></div>
-          <div class="rect rect-info rect-info-2"></div>
           <div class="content">
             <h3 class="general-title general-title">Информация о проектах</h3>
-            <div class="row">
-              <div class="col-md-10">
-                <div class="general-wrapper general-wrapper-info">
-                  <h4 class="info-title">Проект «Строительство жилого посёлка из 6-ти домов в с. Бестужевское»</h4>
-                  <p class="info-text">Село Бестужевское находится в 25 км к юго-востоку от Центрального Сочи и в 8 км от Адлера. Мы купили там 3 смежных участка, общей площадью почти 27 соток.</p>
-                  <p class="info-text">Мы разделим их на 6 участков и зону отдыха (пруд, детская площадка, зона для барбекю), построим на них 6 домов и продадим в качестве отдельных объектов недвижимости по 15 млн руб. Срок реализации проекта – 6-8 месяцев.</p>
-                  <h5 class="info-subtitle">Условия для инвесторов</h5>
-                  <ul class="info-list">
-                    <li>Общий бюджет проекта – 53 281 000 руб.</li>
-                    <li>Сумма необходимых инвестиций – 38 000 000 руб.</li>
-                    <li>Минимальная сумма вложений – 500 тыс. руб.</li>
-                    <li>Доходность инвестора – 24% за год</li>
-                    <li>Доходность проекта – 51,40%</li>
-                  </ul>
+            <div class="info-item info-item-1">
+              <div class="row">
+                <div class="col-md-5 col-md-push-7">
+                  <div class="info-item-img info-item-img-1"><img src="../img/images/info-1.jpg" alt="Бестужевское"/>
+                  </div>
+                </div>
+                <div class="col-md-7 col-md-pull-5">
+                  <div class="general-wrapper general-wrapper-info-item">
+                    <h4 class="info-item-title">Проект «Строительство жилого посёлка из 6-ти домов в с. Бестужевское»</h4>
+                    <p class="info-item-text">Село Бестужевское находится в 25 км к юго-востоку от Центрального Сочи и в 8 км от Адлера. Мы купили там 3 смежных участка, общей площадью почти 27 соток.</p>
+                    <p class="info-item-text">Мы разделим их на 6 участков и зону отдыха (пруд, детская площадка, зона для барбекю), построим на них 6 домов и продадим в качестве отдельных объектов недвижимости по 15 млн руб. Срок реализации проекта – 6-8 месяцев.</p>
+                    <h5 class="info-item-subtitle">Условия для инвесторов</h5>
+                    <ul class="info-item-list">
+                      <li>Общий бюджет проекта – 53 281 000 руб.</li>
+                      <li>Сумма необходимых инвестиций – 38 000 000 руб.</li>
+                      <li>Минимальная сумма вложений – 500 тыс. руб.</li>
+                      <li>Доходность инвестора – 24% за год</li>
+                      <li>Доходность проекта – 51,40%</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-md-8 col-md-push-4">
-                <div class="general-wrapper">
-                  <h4 class="info-title">Проект «Строительство 2-х домов в микрорайоне «Белые акации»</h4>
-                  <p class="info-text">Микрорайон «Белые акации» расположен на одноимённой улицей, которая проходит в черте Адлера, над курортным городком. Это тихий, спокойный уголок города, которые окружен лесом и с которого открывается шикарный вид на море. Территория огорожена шлагбаумом. Инфраструктура – в 7-ми минутах езды на машине.</p>
-                  <ul class="general-list">
-                    <li>- Покупаем участок, площадью 8 соток</li>
-                    <li>- Межуем на 2 участка</li>
-                    <li>- Строим за 4 месяца 2 дома, площадью ~150 и ~200 кв.м.</li>
-                    <li>- Благоустраиваем территорию</li>
-                    <li>- Продаём по цене от 30 млн руб. за дом</li>
-                    <li>- Срок реализации проекта – 8 месяцев</li>
-                  </ul>
-                  <h5 class="info-subtitle">Условия для инвесторов</h5>
-                  <ul class="info-list">
-                    <li>Себестоимость проекта – 20 040 000 руб.</li>
-                    <li>Сумма необходимых инвестиций – 16,8 млн. руб.</li>
-                    <li>Ожидаемая доходность проекта – до 153% годовых (в зависимости от темпов прода)</li>
-                    <li>Минимальная сумма вложений – 500 тыс. руб.</li>
-                    <li>Фиксированная доходность инвесторов – до 32% годовых</li>
-                  </ul>
+            <div class="info-item info-item-2">
+              <div class="row">
+                <div class="col-md-5">
+                  <div class="info-item-img info-item-img-2"><img src="../img/images/info-2.jpg" alt="Белые акации"/>
+                  </div>
+                </div>
+                <div class="col-md-7">
+                  <div class="general-wrapper">
+                    <h4 class="info-item-title">Проект «Строительство 2-х домов в микрорайоне «Белые акации»</h4>
+                    <p class="info-item-text">Микрорайон «Белые акации» расположен на одноимённой улицей, которая проходит в черте Адлера, над курортным городком. Это тихий, спокойный уголок города, которые окружен лесом и с которого открывается шикарный вид на море. Территория огорожена шлагбаумом. Инфраструктура – в 7-ми минутах езды на машине.</p>
+                    <ul class="general-list">
+                      <li>- Покупаем участок, площадью 8 соток</li>
+                      <li>- Межуем на 2 участка</li>
+                      <li>- Строим за 4 месяца 2 дома, площадью ~150 и ~200 кв.м.</li>
+                      <li>- Благоустраиваем территорию</li>
+                      <li>- Продаём по цене от 30 млн руб. за дом</li>
+                      <li>- Срок реализации проекта – 8 месяцев</li>
+                    </ul>
+                    <h5 class="info-item-subtitle">Условия для инвесторов</h5>
+                    <ul class="info-item-list">
+                      <li>Себестоимость проекта – 20 040 000 руб.</li>
+                      <li>Сумма необходимых инвестиций – 16,8 млн. руб.</li>
+                      <li>Ожидаемая доходность проекта – до 153% годовых (в зависимости от темпов прода)</li>
+                      <li>Минимальная сумма вложений – 500 тыс. руб.</li>
+                      <li>Фиксированная доходность инвесторов – до 32% годовых</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
@@ -202,7 +212,7 @@
       </section>
       <section id="author">
         <div class="container">
-          <h3 class="general-title general-title-left general-title-author">Клуб инвесторов «Мой Капитал» <br>— это профессиональное сообщество, где знают всё о приумножении средств</h3>
+          <h3 class="general-title general-title-left general-title-author">Клуб инвесторов «Мой Капитал» <br>— это профессиональное сообщество, где знают всё <br>о приумножении средств</h3>
           <div class="row">
             <div class="col-md-5 col-md-push-7">
               <div class="general-img general-img-author"><img src="../img/images/yuriy.png" alt="Юрий Медушенко"/>
@@ -230,15 +240,15 @@
         <div class="container">
           <div class="row">
             <div class="col-md-5">
-              <h3 class="form-section-title">УЧАСТВОВАТЬ В ПРОЕКТАХ!</h3>
+              <h3 class="form-section-title">УЧАСТВОВАТЬ <br/>В ПРОЕКТАХ!</h3>
             </div>
             <div class="col-md-7">
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                   <p class="form-section-text">с. Бестужевское</p>
-                  <div class="button-wrapper button-wrapper-center"><a class="button" href="https://forms.amocrm.ru/zmzzwl" target="_blank">Инвестировать</a></div>
+                  <div class="button-wrapper button-wrapper-center button-wrapper-form-1"><a class="button" href="https://forms.amocrm.ru/zmzzwl" target="_blank">Инвестировать</a></div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                   <p class="form-section-text">мкр-н "Белые акации"</p>
                   <div class="button-wrapper button-wrapper-center"><a class="button" href="https://forms.amocrm.ru/zmzzzr" target="_blank">Инвестировать</a></div>
                 </div>
