--- a/index.html
+++ b/index.html
@@ -53,21 +53,12 @@
           </div>
         </header>
         <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <p class="main-pre">Приглашаем Вас <span>на онлайн-встречу</span></p>
-              <h1 class="main-title">Инвестиции <br/><span>в недвижимость Сочи</span></h1>
-              <h2 class="main-subtitle">На рынке недвижимости Сочи ажиотаж: <br/>цены растут, как на дрожжах!</h2>
-              <div class="main-info">
-                <p class="main-info-text">Дата и время проведения: <span>17 июня, в 19:00 (мск)</span></p>
-                <p class="main-info-text">Ведущий: <span>Юрий Медушенко</span></p>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="video-wrapper video-wrapper-main">
-                <iframe src="https://www.youtube.com/embed/?autoplay=1&mute=1&modestbranding=1" allowfullscreen="allowfullscreen"></iframe>
-              </div>
-            </div>
+          <p class="main-pre">Приглашаем Вас <span>на онлайн-встречу</span></p>
+          <h1 class="main-title">Инвестиции <br/><span>в недвижимость Сочи</span></h1>
+          <h2 class="main-subtitle">На рынке недвижимости Сочи ажиотаж: <br/>цены растут, как на дрожжах!</h2>
+          <div class="main-info">
+            <p class="main-info-text">Дата и время проведения: <span>17 июня, в 19:00 (мск)</span></p>
+            <p class="main-info-text">Ведущий: <span>Юрий Медушенко</span></p>
           </div>
           <h3 class="main-aftertitle">Выиграйте вместе с нами <br/>на дефиците предложений на рынке!</h3>
         </div>
@@ -210,7 +201,7 @@
               <h3 class="form-title">СПЕШИТЕ ЗАПИСАТЬСЯ</h3>
             </div>
             <div class="col-md-7">
-              <form class="form form-2" action="https://mycapital.autoweboffice.ru/?r=personal/newsletter/sub/add&amp;id=28323&amp;lg=ru&amp;Contact[id_newsletter]=36" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target="_blank">
+              <form class="form form-1" action="https://mycapital.autoweboffice.ru/?r=personal/newsletter/sub/add&amp;id=28323&amp;lg=ru&amp;Contact[id_newsletter]=36" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target="_blank">
                 <div class="email-block email-block-form">
                   <input type="hidden" value="1" name="required_fields[email]"/>
                   <input class="input input-mail input-mail-section" name="Contact[email]" type="text" placeholder="E-mail"/>
@@ -218,15 +209,15 @@
                 <button class="button button-form button-form-section" type="submit">Записаться</button>
                 <div class="clearfix"></div>
                 <p class="alert-message"></p>
-                <div class="checking checking-form">
-                  <input class="check" type="checkbox" id="check-2"/>
-                  <label class="check-label" for="check-2">Я согласен с <a href="politics.pdf" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
+                <div class="checking checking-form checking-main">
+                  <input class="check" type="checkbox" id="check-1"/>
+                  <label class="check-label" for="check-1">Я согласен с <a href="politics.pdf" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
                 </div>
                 <div style="display: none;">
-                  <div id="formTypeSpecificVars-2" style="display: none;">
-                    <input type="hidden" value="36" id="form_newsletter_id_newsletter_2" name="Contact[id_newsletter]"/>
+                  <div id="formTypeSpecificVars-1" style="display: none;">
+                    <input type="hidden" value="36" id="form_newsletter_id_newsletter_1" name="Contact[id_newsletter]"/>
                   </div><!-- API код канала рекламы -->
-                  <input type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_2" name="Contact[id_advertising_channel_page]"/>
+                  <input type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_1" name="Contact[id_advertising_channel_page]"/>
                   <input type="hidden" name="formId" value="27"/>
                   <input type="hidden" name="formVc" value="3282811932"/>
                   <input type="hidden" name="_aid" value=""/>
