video added on main page

--- a/2/index.html
+++ b/2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <meta name="facebook-domain-verification" content="vv0adq14xl3thllrrw8ifhqlbi7lf1"/>
+    <meta name="facebook-domain-verification" content="pmmnzbggx2hlfaibjkce3ncs2ukuqc"/>
     <meta property="og:url" content="https://sochi.mycapitalland.ru/2/"/>
     <meta property="og:title" content="Давно искали перспективные проекты в сфере недвижимости?"/>
     <meta property="og:description" content="Мы запускаем 2 проекта по ИЖС домов в Сочи с доходностью до 32% годовых!"/>
@@ -137,15 +137,15 @@
                     </div>
                   </div>
           </div>
-          <h4 class="why-aftertitle">Узнайте подробности у нашего эксперта во время вебинара!</h4>
+          <h4 class="why-aftertitle">Свяжитесь с нами, чтобы узнать подробности о наших проектах!</h4>
           <div class="row">
             <div class="col-md-4 col-sm-6 col-md-offset-2 col-sm-offset-0">
               <p class="form-section-text">с. Бестужевское</p>
-              <div class="button-wrapper button-wrapper-center button-wrapper-form-1"><a class="button" href="https://forms.amocrm.ru/zmzzwl" target="_blank">Инвестировать</a></div>
+              <div class="button-wrapper button-wrapper-center button-wrapper-form-1"><a class="button" href="https://forms.amocrm.ru/zmzzwl" target="_blank">Получить консультацию</a></div>
             </div>
             <div class="col-md-4 col-sm-6">
               <p class="form-section-text">мкр-н "Белые акации"</p>
-              <div class="button-wrapper button-wrapper-center"><a class="button" href="https://forms.amocrm.ru/zmzzzr" target="_blank">Инвестировать</a></div>
+              <div class="button-wrapper button-wrapper-center"><a class="button" href="https://forms.amocrm.ru/zmzzzr" target="_blank">Получить консультацию</a></div>
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
                     <ul class="info-item-list">
                       <li>Себестоимость проекта – 20 040 000 руб.</li>
                       <li>Сумма необходимых инвестиций – 16,8 млн. руб.</li>
-                      <li>Ожидаемая доходность проекта – до 153% годовых (в зависимости от темпов прода)</li>
+                      <li>Ожидаемая доходность проекта – до 153% годовых (в зависимости от темпов продаж)</li>
                       <li>Минимальная сумма вложений – 500 тыс. руб.</li>
                       <li>Фиксированная доходность инвесторов – до 32% годовых</li>
                     </ul>
