--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <meta name="facebook-domain-verification" content="vv0adq14xl3thllrrw8ifhqlbi7lf1"/>
+    <meta name="facebook-domain-verification" content="pmmnzbggx2hlfaibjkce3ncs2ukuqc"/>
     <meta property="og:url" content="https://sochi.mycapitalland.ru/"/>
     <meta property="og:title" content="«Ивестиции в недвижимость Сочи»"/>
     <meta property="og:description" content="Онлайн-встреча с Юрием Медушенко"/>
@@ -53,12 +53,21 @@
           </div>
         </header>
         <div class="container">
-          <p class="main-pre">Приглашаем Вас <span>на онлайн-встречу</span></p>
-          <h1 class="main-title">Инвестиции <br/><span>в недвижимость Сочи</span></h1>
-          <h2 class="main-subtitle">На рынке недвижимости Сочи ажиотаж: <br/>цены растут, как на дрожжах!</h2>
-          <div class="main-info">
-            <p class="main-info-text">Дата и время проведения: <span>17 июня, в 19:00 (мск)</span></p>
-            <p class="main-info-text">Ведущий: <span>Юрий Медушенко</span></p>
+          <div class="row">
+            <div class="col-md-6">
+              <p class="main-pre">Приглашаем Вас <span>на онлайн-встречу</span></p>
+              <h1 class="main-title">Инвестиции <br/><span>в недвижимость Сочи</span></h1>
+              <h2 class="main-subtitle">На рынке недвижимости Сочи ажиотаж: <br/>цены растут, как на дрожжах!</h2>
+              <div class="main-info">
+                <p class="main-info-text">Дата и время проведения: <span>17 июня, в 19:00 (мск)</span></p>
+                <p class="main-info-text">Ведущий: <span>Юрий Медушенко</span></p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="video-wrapper video-wrapper-main">
+                <iframe src="https://www.youtube.com/embed/x6od1Qlcjls?autoplay=1&mute=1&modestbranding=1" allowfullscreen="allowfullscreen"></iframe>
+              </div>
+            </div>
           </div>
           <h3 class="main-aftertitle">Выиграйте вместе с нами <br/>на дефиците предложений на рынке!</h3>
         </div>
