Thanks 2 page is done

--- a/thanks-2/index.html
+++ b/thanks-2/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <meta property="og:url" content="https://sochi.mycapitalland.ru/thanks/"/>
-    <meta property="og:title" content="Благодарим за регистрацию на вебинар!"/>
+    <meta property="og:url" content="https://sochi.mycapitalland.ru/thanks-2/"/>
+    <meta property="og:title" content="Благодарим за интерес, проявленный к нашим проектам!"/>
     <meta property="og:description" content="Присоединяйтесь к закрытой группе в Telegram!"/>
-    <title>Благодарим за регистрацию на вебинар! Присоединяйтесь к закрытой группе в Telegram!</title>
+    <title>Благодарим за интерес, проявленный к нашим проектам! Присоединяйтесь к закрытой группе в Telegram!</title>
     <link rel="apple-touch-icon" href="../favicon.svg"/>
     <link rel="apple-touch-icon" sizes="76x76" href="../favicon.svg"/>
     <link rel="apple-touch-icon" sizes="120x120" href="../favicon.svg"/>
@@ -52,7 +52,7 @@
           </div>
         </header>
         <div class="container">
-          <h1 class="main-title">Благодарим за регистрацию <br/><span>на вебинар!</span><small>Загляните в свой почтовый ящик и подтвердите адрес</small></h1>
+          <h1 class="main-title">Благодарим за интерес, <br/>проявленный к нашим проектам!</h1>
           <div class="row">
             <div class="col-md-6"><img class="main-img" src="../img/images/laptop.png" alt="Laptop"/>
             </div>
